test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-oknil-borrowed.good
init-field-dflt-nonnil-owned-from-oknil-borrowed.chpl:11: error: default-initializing a field with a non-nilable type owned MyClass from an instance of nilable borrowed MyClass?
